ajout du mode graphique (button quit)